Fixed horizontal scrolling issue in AOS-animated sections (related to 'Projects' section container), modified AOS styles import to SCSS, changed overflow-x: 'hidden' to 'clip' in the body

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,6 @@
 @use "./scss/index.scss" as *;
 @import "../node_modules/modern-normalize/modern-normalize.css";
-@import "aos/dist/aos.css";
+@import "node_modules/aos/src/sass/aos.scss";
 @import "react-toastify/dist/ReactToastify.min.css";
 @import "react-responsive-carousel/lib/styles/carousel.min.css";
 @import "yet-another-react-lightbox/styles.css";
@@ -13,7 +13,6 @@
   padding-block: 200px;
   padding-inline: 50px;
   margin-inline: auto;
-  overflow-x: hidden;
 
   @include max-width(768px) {
     padding-block: 120px;
@@ -51,7 +50,7 @@ body {
   );
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 ul,
